--- a/index.html
+++ b/index.html
@@ -10,25 +10,14 @@
         <h2>I Am A Web Developer</h2>
         <hr>
         <h3><a href="./public/movie-ranking.html">J's Movie Project Ranking</a></h3>
-        <img src="./assets/images/Movie1.png" height="200" alt="movie-project"/>
+        <img src="./assets/images/Movie1.png" height="200" alt="movie project preview"/>
         <h3><a href="./public/birthday-invite.html">Jay's Birthday Invite</a></h3>
-        <img src="./assets/images/Bday1.png" height="200" alt="birthday-project"/>
+        <img src="./assets/images/Bday1.png" height="200" alt="birthday project preview"/>
         <hr />
         <a href="./public/about.html">About Jay</a>
         <a href="./public/contact.html">Contact Jay</a>
 </body>
+    
 </html>
 
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
